--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ img{width: 135px; height: 22px}
     <img src="animate.gif">
     </div>
         </div>
-        <p>According to an NLTK natural language processor I ran the data through (you can find all my working here), the word choices used around Meghan were much more negative than those used around Kate. That makes sense, given all the scandals that have surrounded Meghan this year, especially after Prince Harry's very public rift with his brother.</p>
+        <p>According to an NLTK natural language processor I ran the data through (you can find all my working <a href="https://github.com/Colvap/Project-2-">here</a>), the word choices used around Meghan were much more negative than those used around Kate. That makes sense, given all the scandals that have surrounded Meghan this year, especially after Prince Harry's very public rift with his brother.</p>
         <p>Maybe the twenty most-used adjectives, verbs and nouns used around each of the two will tell us something about what Brits expect from their young royal women.</p>
     </div>
     </div>
