--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ p{font-family:'Georgia';
     font-size: 20px;
   width: 60%;
   padding: 10px;}
-img{width: 135px; height: 22px}
+
 .container{
   max-width: 900px;
   margin: auto;
@@ -55,7 +55,7 @@ img{width: 135px; height: 22px}
     
     <div class="opener">
         <div class="prose-container">
-        <p>Harry and Meghan's seccession from the royal family has made them two of the most unpopular royals in the UK (placed just above a serial-rapist in the royal family league tables).</p>
+        <p>Harry and Meghan's seccession from the royal family has made them two of the most unpopular royals in the UK's royal family league tables (placed just above a serial-rapist).</p>
         <p>The UK tabloids have it in for her. A senior editor I used to work under at the Sunday Times would regularly refer to her as "that bloody woman". 
         </p>
         <p>For all Meghan Markle's attention-seeking, she could have been the monarchy's best asset. She's modern, woke, interested in good causes. Shouldn't that be a redeeming quality?</p>
@@ -75,7 +75,7 @@ img{width: 135px; height: 22px}
 <div class="chart-section">
 
     <div class="full-size-image" style="max-width: 700px; margin: 0 auto;">
-        <script type='module' src='https://prod-uk-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-uk-a.online.tableau.com/t/colvap/views/Kate/kate' width='1325' height='682' hide-tabs toolbar='bottom' ></tableau-viz>
+        <img src="kate.png">
     </div>
 </div>
 <br>
@@ -94,7 +94,7 @@ img{width: 135px; height: 22px}
     <div class="chart-section">
 
         <div class="full-size-image" style="max-width: 700px; margin: 0 auto;">
-            <script type='module' src='https://prod-uk-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-uk-a.online.tableau.com/t/colvap/views/Meghan/Meghan' width='1325' height='682' hide-tabs toolbar='bottom' ></tableau-viz>
+            <img src="Meghan.png">
         </div>"
     </div>
 </div>
