--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ p{font-family:'Georgia';
     <div class="opener">
         <div class="prose-container">
         <p>Harry and Meghan's seccession from the royal family has made them two of the most unpopular royals in the UK's royal family league tables (placed just above a serial-rapist).</p>
-        <p>The UK tabloids have it in for her. A senior editor I used to work under at the Sunday Times would regularly refer to her as "that bloody woman". 
+        <p>The UK tabloids have it in for Meghan. A senior editor I used to work under at the Sunday Times would regularly refer to her as "that bloody woman". 
         </p>
         <p>For all Meghan Markle's attention-seeking, she could have been the monarchy's best asset. She's modern, woke, interested in good causes. Shouldn't that be a redeeming quality?</p>
-        <p>But everyone loves the dutiful, motherly Kate Middleton, happily-married to Prince William and scandal-free for the past two decades. So what has Kate got that Meghan doesn't?</p>
+        <p>But everyone loves the dutiful, motherly Kate Middleton, happily-married to Prince William and scandal-free for the past decade. So what has Kate got that Meghan doesn't?</p>
         <p>For this project, I scraped every headline and image caption for the two women in 2023 from the Daily Mail (a tabloid with the highest circulation in the UK, notorious for crude writing and misogyny).</p>
         <br>
         <p>It took a while.</p>
@@ -67,8 +67,8 @@ p{font-family:'Georgia';
     <img src="animate.gif">
     </div>
         </div>
-        <p>According to an NLTK natural language processor I ran the data through (you can find all my working <a href="https://github.com/Colvap/Project-2-">here</a>), the word choices used around Meghan were much more negative than those used around Kate. That makes sense, given all the scandals that have surrounded Meghan this year, especially after Prince Harry's very public rift with his brother.</p>
-        <p>Maybe the twenty most-used adjectives, verbs and nouns used around each of the two will tell us something about what Brits expect from their young royal women.</p>
+        <p>According to an NLTK natural language processor I ran the data through (you can find all my working <a href="https://github.com/Colvap/Project-2-">here</a>), the word choices used around Meghan were much more negative than those used around Kate. That makes sense, with the scandals surrounding Meghan this year, especially after Prince Harry's rift with his brother.</p>
+        <p>Maybe the twenty most-used adjectives, verbs and nouns used around the two will tell us something about what Brits expect from young royal women.</p>
     </div>
     </div>
 </div>
@@ -82,9 +82,9 @@ p{font-family:'Georgia';
 <br>
 <div class="opener" style="margin: auto">
     <div class="prose-container">
-        <p>The Princess of Wales has a large number of adjectives in her word cloud, editors choosing to parise her as 'dazzling' and 'elegant', while other associations surround her position as a mother, with 'children', 'family' and 'wedding' topping the list.</p> 
-        <p>Her actions are fairly passive, likely due to the number of public appearances covered by the Mail, often <a href="https://www.dailymail.co.uk/femail/article-12210831/Polka-dot-princess-Kate-radiant-Alessandra-Rich-dress-arrives-Garter-Day.html">commenting</a> on her 'radiant' clothes. The formula is how she 'appeared' on her 'visit' somewhere, and 'looked' wonderful 'wearing' something as she 'chatted' to her many fans.</p>
-        <p>Initially I thought it was weird they mentioned her age - 41 - so many times. Initially I thought this was evidence of obsession with female ageing, but it turned out that all figures categorized under the Mail's 'news' section have their ages mentioned.</p>
+        <p>The Princess of Wales has a large number of adjectives in her word cloud, editors choosing to parise her as 'dazzling' and 'elegant', focusing on her position as a mother, with 'children', 'family' and 'wedding' topping the list.</p> 
+        <p>Her verbs are fairly passive, likely due to all her public appearances covered by the Mail, often <a href="https://www.dailymail.co.uk/femail/article-12210831/Polka-dot-princess-Kate-radiant-Alessandra-Rich-dress-arrives-Garter-Day.html">fawning</a> over her 'radiant' clothes. The formula is how she 'appeared' on her 'visit' somewhere, and 'looked' wonderful 'wearing' something as she 'chatted' to her many fans.</p>
+        <p>I thought it was strange they mentioned her age - 41 - so often. Initially I interpreted this as evidence of obsession with female ageing, but it turns out to be an editorial standard - all figures written about under the Mail's 'news' section have their ages mentioned.</p>
         <p>Meghan, meanwhile, has all her articles listed under 'showbiz':</p>
 </div>
 </div>
@@ -101,11 +101,11 @@ p{font-family:'Georgia';
 <div class="section">
     <div class="opener">
         <div class="prose-container">
-            <p>Verbs are used more often for Meghan than Kate, showing her agency. These are more active and pugnacious, like 'told', 'spotted' and 'claimed'.</p>
-            <p>Many of her nouns indicate interest in her as a spouse, like 'wife' and 'wedding', but also her activism: 'Oprah', 'Netflix', 'interview'.</p>
-            <p>Meghan's adjectives are more negative: 'reportedly', 'controversial', 'explosive'.</p>
+            <p>Verbs are used more often for Meghan than Kate, showing the former's agency. These verbs are more active and pugnacious, like 'told', 'spotted' and 'claimed'.</p>
+            <p>Like Kate, many of Meghan's nouns indicate interest in her as a spouse, like 'wife' and 'wedding'. But they also highlight her activism: 'Oprah', 'Netflix', 'interview'.</p>
+            <p>Meanwhile her adjectives are more associated with disputes: 'reportedly', 'controversial', 'explosive'.</p>
     </div>
-<p>In Netflix's 'The Crown', a leitmotif is how the system of the royal family rewards those who are passive. As Eileen Atkins (who plays the forimdable Queen Mary) says, 'the less you do, the less you say, the better.'</p>
+<p>In Netflix's 'The Crown', a leitmotif is how the royal family's greatest successes are those who are most passive. As the formidable Eileen Atkins (playing the old Queen Mary) says to a fresh-faced Queen Elizabeth II, 'the less you do, the less you say, the better.'</p>
 <p>It seems that, to win the hearts of Middle England as a royal, it still pays to be passive.</p>
 
 </div>
