--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ p{font-family:'Georgia';
     
     <div class="opener">
         <div class="prose-container">
-        <p>Harry and Meghan's seccession from the royal family has made them two of the most unpopular royals in the UK's royal family league tables (placed just above a serial-rapist).</p>
-        <p>The UK tabloids have it in for Meghan. A senior editor I used to work under at the Sunday Times would regularly refer to her as "that bloody woman". 
+        <p>Harry and Meghan's seccession from the royal family has made them two of the most unpopular in the UK's royal family league table (placed just above a serial-rapist).</p>
+        <p>The UK tabloids have it in for Meghan. A senior editor I used to work under at the Sunday Times would regularly refer to her as "that bloody woman". And the angle taken by the dailies often sets the tone for public opinion. 
         </p>
         <p>For all Meghan Markle's attention-seeking, she could have been the monarchy's best asset. She's modern, woke, interested in good causes. Shouldn't that be a redeeming quality?</p>
         <p>But everyone loves the dutiful, motherly Kate Middleton, happily-married to Prince William and scandal-free for the past decade. So what has Kate got that Meghan doesn't?</p>
