--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ p{font-family:'Georgia';
         <p>Harry and Meghan's seccession from the royal family has made them two of the most unpopular in the UK's royal family league table (placed just above a serial-rapist).</p>
         <p>The UK tabloids have it in for Meghan. A senior editor I used to work under at the Sunday Times would regularly refer to her as "that bloody woman". And the angle taken by the dailies often sets the tone for public opinion. 
         </p>
-        <p>For all Meghan Markle's attention-seeking, she could have been the monarchy's best asset. She's modern, woke, interested in good causes. Shouldn't that be a redeeming quality?</p>
+        <p>For all Meghan Markle's attention-seeking, she could have been the monarchy's best asset. She's modern, woke, interested in good causes. Shouldn't those be redeeming qualities for a 21st-century monarchy?</p>
         <p>But everyone loves the dutiful, motherly Kate Middleton, happily-married to Prince William and scandal-free for the past decade. So what has Kate got that Meghan doesn't?</p>
         <p>For this project, I scraped every headline and image caption for the two women in 2023 from the Daily Mail (a tabloid with the highest circulation in the UK, notorious for crude writing and misogyny).</p>
         <br>
