--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ p{font-family:'Georgia';
 <br>
 <div class="opener" style="margin: auto">
     <div class="prose-container">
-        <p>The Princess of Wales has a large number of adjectives in her word cloud, editors choosing to parise her as 'dazzling' and 'elegant', focusing on her position as a mother, with 'children', 'family' and 'wedding' topping the list.</p> 
+        <p>The Princess of Wales has a large number of adjectives in her word cloud, editors choosing to praise her as 'dazzling' and 'elegant', focusing on her position as a mother, with 'children', 'family' and 'wedding' topping the list.</p> 
         <p>Her verbs are fairly passive, likely due to all her public appearances covered by the Mail, often <a href="https://www.dailymail.co.uk/femail/article-12210831/Polka-dot-princess-Kate-radiant-Alessandra-Rich-dress-arrives-Garter-Day.html">fawning</a> over her 'radiant' clothes. The formula is how she 'appeared' on her 'visit' somewhere, and 'looked' wonderful 'wearing' something as she 'chatted' to her many fans.</p>
         <p>I thought it was strange they mentioned her age - 41 - so often. Initially I interpreted this as evidence of obsession with female ageing, but it turns out to be an editorial standard - all figures written about under the Mail's 'news' section have their ages mentioned.</p>
         <p>Meghan, meanwhile, has all her articles listed under 'showbiz':</p>
