--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@ p{font-family:'Georgia';
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 75vh;
         }
 
         .gif-container img {
             width: 50%;
             height: auto;
-            margin-top:30px;
-            margin-bottom:30px
+            /* padding-bottom:0%;
+            margin-top:0px;
+            margin-bottom:0px */
         }
     </style>
 </head>
@@ -55,7 +56,7 @@ p{font-family:'Georgia';
     
     <div class="opener">
         <div class="prose-container">
-        <p>Harry and Meghan's seccession from the royal family has made them two of the most unpopular in the UK's royal family league table (placed just above a serial-rapist).</p>
+        <p>Harry and Meghan's seccession from the royal family has made them two of the most unpopular in the UK's royal family league table (placed just above a man accused of sexual assault).</p>
         <p>The UK tabloids have it in for Meghan. A senior editor I used to work under at the Sunday Times would regularly refer to her as "that bloody woman". And the angle taken by the dailies often sets the tone for public opinion. 
         </p>
         <p>For all Meghan Markle's attention-seeking, she could have been the monarchy's best asset. She's modern, woke, interested in good causes. Shouldn't those be redeeming qualities for a 21st-century monarchy?</p>
